# renderer

./: .gitignore  CMakeLists.txt  build.bat  build.sh  build_and_run.sh  xrender
resources/shaders/: default.fs
src/: main.cpp  shader.hpp
src/libs/glad/: glad.c
src/libs/std_image/: std_image.cpp
